# yttranscribe

./: .gitignore  .mcp.json  README.md  pyproject.toml
src/yttranscribe/: __init__.py  cli.py  markdown.py  mcp_server.py  transcript.py  youtube.py
tests/: test_cli.py  test_markdown.py  test_mcp_server.py  test_transcript.py  test_youtube.py
